# PotatoDiseaseDetection-Backend

./: copy_of_potatodiseaseclassification.py  main.py  model.keras  pyproject.toml
